Print the exact metric values

--- a/cs4575_project2/scripts/loadDataset.ipynb
+++ b/cs4575_project2/scripts/loadDataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -23,20 +23,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset saved to: ./../datasets/SWE-bench_Lite.csv\n"
+      "Dataset saved to: ./../dockerfiles/volume/datasets/SWE-bench_Lite_Big.csv\n"
      ]
     }
    ],
    "source": [
     "# Create the output directory if it doesn't exist\n",
-    "output_dir = \"./../datasets\"\n",
+    "output_dir = \"./../dockerfiles/volume/datasets\"\n",
     "\n",
     "# Load the SWE-bench Lite dataset\n",
     "ds = load_dataset(\"princeton-nlp/SWE-bench_Lite\")\n",
@@ -46,9 +46,26 @@
     "df = ds[\"test\"].to_pandas()\n",
     "\n",
     "# Save the DataFrame as a CSV file in the specified directory\n",
-    "csv_path = os.path.join(output_dir, \"SWE-bench_Lite.csv\")\n",
+    "csv_path = os.path.join(output_dir, \"SWE-bench_Lite_Big.csv\")\n",
     "df.to_csv(csv_path, index=False)\n",
     "print(\"Dataset saved to:\", csv_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(300, 12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.shape)"
    ]
   },
   {
